# ProjectOOP

./: .gitignore  README.md  coverage_report.txt  main.py  mypy.ini  pyproject.toml
data/: products.json
src/ecommerce/: __init__.py  abstract_models.py  exceptions.py  mixins.py  models.py  orders.py  utils.py
tests/: conftest.py  test_abstract_models.py  test_exceptions.py  test_mixins.py  test_models.py  test_orders.py  test_utils.py
